fixed layout/sizes with scrollbar etc

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,41 +1,11 @@
 body {
+    height:100vh;
 	margin:0;
 	font-family: Verdana;
 	font-size:16px;
 	background-color: #FBF5F3;
 
-	.app-title {
-		h1 {
-			color: #828A95;
-			font-size: 30px;
-			font-family:'Roboto', sans-serif;
-			text-align: center;
-			border-bottom: 3px solid #DEE1DA;
-      border-radius: 10px;
-		}
-	}
-
-	.messages {
-    overflow: scroll;
-    height: 540px;
-
-		.message {
-			display: inline-block;
-			border:2px solid #DEE1DA;
-			border-radius:5px;
-			background-color: #FFFEFD;
-			padding: 10px;
-			padding-bottom: 0;
-			margin: 5px;
-		}
-	}
-
-	.input-area {
-		width:100%;
-		position:fixed;
-		bottom:0;
-		padding:10px;
-		background-color:#FBF5F3;
-		border-top:2px solid #DEE1DA;
+	.chat-area{
+		height:100%;
 	}
 }
